GNOME Bugzilla – Bug 587189
Network Manager applet does not animate on Gnome Shell (Gnome 3)
Last modified: 2009-07-28 22:42:42 UTC
Please describe the problem: If there is not motion of the mouse, or input on the keyboard, then there will be no animation in the applet. This means that the applet will also not indicate successful connection until the mouse is moved. Steps to reproduce: 1. Install Gnome Shell 2. Run it with --replace 3. Join a network 4. Don't move mouse/type. Actual results: The network manager applet does not graphically update without computer input. Expected results: The network manager to provide aesthetically pleasing animations that indicate success or failure. Does this happen every time? Yes Other information: I am using Gnome Shell inside of Ubuntu 9.04.
I can reproduce this on Fedora 11, nvidia proprietary drivers.
Created attachment 138907 [details] [review] Bug 587189 - Do automatic updates for embedded windows We were explicitly disabling automatic synchronization of the texture with the window for an unknown reason; enable it. This fixes applets which draw animations such as NetworkManager.
Read the comments there carefully - there are two different uses of the term "automatic" floating in the API: void clutter_x11_texture_pixmap_set_window (ClutterX11TexturePixmap *texture, Window window, gboolean automatic); is entirely different from: void clutter_x11_texture_pixmap_set_automatic (ClutterX11TexturePixmap *texture, gboolean setting); what your patch does is make the X server draw icons directly to the screen on top of the clutter display. It's probably seeming to work because compositing on black happens to look the same as drawing an ARGB32 window directly to the display. But try changing the panel color.
Hmm, right I see we do set automatic to true later on. Needs more investigation then; a quick thought was that it had something to do with *when* we were calling _set_automatic, i.e. in the _init path. But that appears to not be the case.
Clutter bug, patch posted to: http://bugzilla.gnome.org/show_bug.cgi?id=587189
Wrong bug number?
Yeah: http://bugzilla.openedhand.com/show_bug.cgi?id=1710
http://bugzilla.openedhand.com/show_bug.cgi?id=1710 was pushed and fixed the problem.